# gl4es

./: .gitmodules  CMakeLists.txt  version.h
.github/workflows/: build.yml  generatekey.yml
base_apk/: AndroidManifest.xml  AndroidManifest.xml.bak  classes.dex  my_release.keystore  resources.arsc
src/: CMakeLists.txt
src/egl/: egl.c
src/gl/: arbconverter.c  arbconverter.h  attributes.h  blend.c  blit.c  buffers.c  buffers.h  decompress.c  directstate.c  drawing.c  fpe.c  fpe_cache.c  framebuffers.c  getter.c  gl4es.c  gles.h  glesfuncs.inc  glstate.c  hint.c  init.c  init.h  light.c  line.c  list.c  listdraw.c  loader.c  loader.h  matrix.c  matvec.c  pixel.c  planes.c  program.c  program.h  queries.c  raster.c  render.c  samplers.c  shader.c  shaderconv.c  spirv_flow.cpp  (+10 more)
src/gl/math/: matheval.c
src/gl/wrap/: gl4eswraps.c  gles.c  gles.h  glstub.c
src/glsl_optimizer/: CMakeLists.txt
src/glx/: glx.c  hardext.c  hardext.h
src/optimizer/: glsl_optimizer.h
src/spirv/: spirv_wrapper.cpp  spirv_wrapper.h
